--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 body {
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 18px;
   font-weight: 300;
   line-height: 1.8;
@@ -28,7 +28,7 @@ a:hover, a:focus, a:active {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   color: #000;
   margin-bottom: 30px;
 }
@@ -40,7 +40,7 @@ p {
 .btn {
   margin-right: 4px;
   margin-bottom: 4px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 12px;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -297,7 +297,7 @@ p {
   text-align: center;
   width: 19.33%;
   font-size: 40px;
-  font-family: "Open Sans", Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   font-weight: 700;
   font-style: italic;
 }
@@ -494,7 +494,7 @@ p {
 }
 .fh5co-tabs-container .fh5co-tab-content h2 {
   font-size: 20px;
-  font-weight: 300;
+  font-weight: 400;
   line-height: 1.8;
   margin-bottom: 30px;
   color: #7b7b7b;
